--- a/server/package.json
+++ b/server/package.json
@@ -25,12 +25,14 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.12",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
+    "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.14"
   }
 }
