--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.26",
+    "@types/node-cron": "^3.0.11",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
     "cookie-parser": "^1.4.6",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.12",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
