--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,22 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-data-grid": "^7.1.0",
     "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.6.8",
     "formik": "^2.4.5",
+    "install": "^0.13.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "npm": "^10.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.0",
+    "timeago.js": "^4.0.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
